[fix]: [CDS-58003]: Outbox events for service batch create API (#46215)
* [fix]: [CDS-58003]: Outbox events for service batch create API

* [fix]: [CDS-58003]: Fix Test