@@ -20,9 +20,9 @@ import static io.harness.rule.OwnerRule.vivekveman;
 import static java.util.Arrays.asList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.Matchers.any;
-import static org.mockito.Matchers.anyInt;
-import static org.mockito.Matchers.anyString;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
@@ -41,6 +41,7 @@ import io.harness.ng.core.EntityDetail;
 import io.harness.ng.core.dto.ResponseDTO;
 import io.harness.ng.core.entitysetupusage.dto.EntitySetupUsageDTO;
 import io.harness.ng.core.entitysetupusage.impl.EntitySetupUsageServiceImpl;
+import io.harness.ng.core.events.ServiceCreateEvent;
 import io.harness.ng.core.service.dto.ServiceResponseDTO;
 import io.harness.ng.core.service.entity.ArtifactSourcesResponseDTO;
 import io.harness.ng.core.service.entity.ServiceEntity;
@@ -175,7 +176,7 @@ public class ServiceEntityServiceImplTest extends CDNGEntitiesTestBase {
     assertThat(createdService.getName()).isEqualTo(serviceEntity.getName());
     assertThat(createdService.getType()).isEqualTo(serviceEntity.getType());
     assertThat(createdService.getGitOpsEnabled()).isEqualTo(serviceEntity.getGitOpsEnabled());
-    assertThat(createdService.getVersion()).isEqualTo(0L);
+    assertThat(createdService.getVersion()).isZero();
 
     // Get operations
     Optional<ServiceEntity> getService =
@@ -280,7 +281,7 @@ public class ServiceEntityServiceImplTest extends CDNGEntitiesTestBase {
 
     list = serviceEntityService.list(criteriaFromServiceFilter, pageRequest);
     assertThat(list.getContent()).isNotNull();
-    assertThat(list.getContent().size()).isEqualTo(0);
+    assertThat(list.getContent().size()).isZero();
 
     // Upsert operations for org level
     ServiceEntity upsertServiceRequestOrgLevel = ServiceEntity.builder()
@@ -324,19 +325,20 @@ public class ServiceEntityServiceImplTest extends CDNGEntitiesTestBase {
   @Category(UnitTests.class)
   public void testBulkCreate() {
     List<ServiceEntity> serviceEntities = new ArrayList<>();
-    for (int i = 0; i < 5; i++) {
+    for (int i = 0; i < 2; i++) {
       String serviceIdentifier = "identifier " + i;
       String serviceName = "serviceName " + i;
       ServiceEntity serviceEntity = createServiceEntity(serviceIdentifier, serviceName);
       serviceEntities.add(serviceEntity);
     }
     serviceEntityService.bulkCreate(ACCOUNT_ID, serviceEntities);
-    for (int i = 0; i < 5; i++) {
+    for (int i = 0; i < 2; i++) {
       String serviceIdentifier = "identifier " + i;
       Optional<ServiceEntity> serviceEntitySaved =
           serviceEntityService.get(ACCOUNT_ID, ORG_ID, PROJECT_ID, serviceIdentifier, false);
       assertThat(serviceEntitySaved.isPresent()).isTrue();
     }
+    verify(outboxService, times(2)).save(any(ServiceCreateEvent.class));
   }
 
   @Test
@@ -344,8 +346,8 @@ public class ServiceEntityServiceImplTest extends CDNGEntitiesTestBase {
   @Category(UnitTests.class)
   public void testGetAllServices() {
     List<ServiceEntity> serviceEntities = new ArrayList<>();
-    int pageSize = 1000;
-    int numOfServices = pageSize * 2 + 100; // creating adhoc num of services, not in multiples of page size
+    int pageSize = 50;
+    int numOfServices = pageSize * 2 + 10; // creating adhoc num of services, not in multiples of page size
     for (int i = 0; i < numOfServices; i++) {
       String serviceIdentifier = "identifier " + i;
       String serviceName = "serviceName " + i;
@@ -364,7 +366,7 @@ public class ServiceEntityServiceImplTest extends CDNGEntitiesTestBase {
   @Category(UnitTests.class)
   public void testGetAllNonDeletedServices() {
     List<ServiceEntity> serviceEntities = new ArrayList<>();
-    int numOfServices = 20;
+    int numOfServices = 4;
     for (int i = 0; i < numOfServices; i++) {
       String serviceIdentifier = "identifier " + i;
       String serviceName = "serviceName " + i;
@@ -384,7 +386,7 @@ public class ServiceEntityServiceImplTest extends CDNGEntitiesTestBase {
   @Category(UnitTests.class)
   public void testGetAllNonDeletedServicesWithSort() {
     List<ServiceEntity> serviceEntities = new ArrayList<>();
-    int numOfServices = 20;
+    int numOfServices = 4;
     for (int i = 0; i < numOfServices; i++) {
       String serviceIdentifier = "identifier" + i;
       String serviceName = String.valueOf((char) ('A' + i));
@@ -395,7 +397,7 @@ public class ServiceEntityServiceImplTest extends CDNGEntitiesTestBase {
     serviceEntityService.bulkCreate(ACCOUNT_ID, serviceEntities);
 
     List<ServiceEntity> serviceEntityList =
-        serviceEntityService.getAllNonDeletedServices(ACCOUNT_ID, ORG_ID, PROJECT_ID, Arrays.asList("name,DESC"));
+        serviceEntityService.getAllNonDeletedServices(ACCOUNT_ID, ORG_ID, PROJECT_ID, List.of("name,DESC"));
     assertThat(serviceEntityList.size()).isEqualTo(numOfServices / 2);
     assertThat(serviceEntityList.get(0).getName())
         .isGreaterThan(serviceEntityList.get(serviceEntityList.size() - 1).getName());
@@ -420,7 +422,7 @@ public class ServiceEntityServiceImplTest extends CDNGEntitiesTestBase {
     serviceEntityService.bulkCreate(ACCOUNT_ID, serviceEntities);
     Integer activeServiceCount =
         serviceEntityService.findActiveServicesCountAtGivenTimestamp(ACCOUNT_ID, ORG_ID, PROJECT_ID, 16);
-    assertThat(activeServiceCount).isEqualTo(16 - 2);
+    assertThat(activeServiceCount).isEqualTo(14);
   }
 
   private ServiceEntity createServiceEntity(String identifier, String name) {
@@ -455,7 +457,7 @@ public class ServiceEntityServiceImplTest extends CDNGEntitiesTestBase {
   @Owner(developers = PRABU)
   @Category(UnitTests.class)
   public void testErrorMessageWhenServiceIsReferenced() {
-    List<EntitySetupUsageDTO> referencedByEntities = Arrays.asList(getEntitySetupUsageDTO());
+    List<EntitySetupUsageDTO> referencedByEntities = List.of(getEntitySetupUsageDTO());
     when(entitySetupUsageService.listAllEntityUsage(anyInt(), anyInt(), anyString(), anyString(), any(), anyString()))
         .thenReturn(new PageImpl<>(referencedByEntities));
     assertThatThrownBy(() -> serviceEntityService.delete(ACCOUNT_ID, ORG_ID, PROJECT_ID, "SERVICE", 0L, false))
@@ -463,7 +465,7 @@ public class ServiceEntityServiceImplTest extends CDNGEntitiesTestBase {
         .hasMessage(
             "The service SERVICE cannot be deleted because it is being referenced in 1 entity. To delete your service, please remove the reference service from these entities.");
 
-    referencedByEntities = Arrays.asList(getEntitySetupUsageDTO(), getEntitySetupUsageDTO());
+    referencedByEntities = List.of(getEntitySetupUsageDTO(), getEntitySetupUsageDTO());
     when(entitySetupUsageService.listAllEntityUsage(anyInt(), anyInt(), anyString(), anyString(), any(), anyString()))
         .thenReturn(new PageImpl<>(referencedByEntities));
     assertThatThrownBy(() -> serviceEntityService.delete(ACCOUNT_ID, ORG_ID, PROJECT_ID, "SERVICE", 0L, false))
@@ -505,7 +507,7 @@ public class ServiceEntityServiceImplTest extends CDNGEntitiesTestBase {
     Pageable pageRequest = PageUtils.getPageRequest(0, 10, null);
     Page<ServiceEntity> list = serviceEntityService.list(criteriaFromServiceFilter, pageRequest);
     assertThat(list.getContent()).isNotNull();
-    assertThat(list.getContent().size()).isEqualTo(0);
+    assertThat(list.getContent().size()).isZero();
   }
 
   @Test
@@ -532,7 +534,7 @@ public class ServiceEntityServiceImplTest extends CDNGEntitiesTestBase {
         CoreCriteriaUtils.createCriteriaForGetList("ACCOUNT_ID", "ORG_ID", "PROJECT_ID");
     Pageable pageRequest = PageUtils.getPageRequest(0, 10, null);
     Page<ServiceEntity> list = serviceEntityService.list(criteriaFromServiceFilter, pageRequest);
-    assertThat(list.getContent().size()).isEqualTo(0);
+    assertThat(list.getContent().size()).isZero();
   }
 
   @Test
@@ -840,9 +842,9 @@ public class ServiceEntityServiceImplTest extends CDNGEntitiesTestBase {
     Criteria criteriaFromServiceFilter =
         ServiceFilterHelper.createCriteriaForGetList("ACCOUNT_ID", null, null, null, false, false);
 
-    assertThat(criteriaFromServiceFilter.getCriteriaObject().containsKey("accountId")).isTrue();
-    assertThat(criteriaFromServiceFilter.getCriteriaObject().containsKey("orgIdentifier")).isTrue();
-    assertThat(criteriaFromServiceFilter.getCriteriaObject().containsKey("projectIdentifier")).isTrue();
+    assertThat(criteriaFromServiceFilter.getCriteriaObject()).containsKey("accountId");
+    assertThat(criteriaFromServiceFilter.getCriteriaObject()).containsKey("orgIdentifier");
+    assertThat(criteriaFromServiceFilter.getCriteriaObject()).containsKey("projectIdentifier");
   }
 
   @Test
@@ -947,7 +949,7 @@ public class ServiceEntityServiceImplTest extends CDNGEntitiesTestBase {
     serviceEntityService.create(serviceEntity);
     when(entitySetupUsageService.listAllEntityUsage(anyInt(), anyInt(), anyString(), anyString(), any(), anyString()))
         .thenReturn(Page.empty());
-    boolean delete = serviceEntityService.delete("ACCOUNT_ID", "ORG_ID", "PROJECT_ID", id, 0L, true);
+    serviceEntityService.delete("ACCOUNT_ID", "ORG_ID", "PROJECT_ID", id, 0L, true);
     verify(entitySetupUsageService, times(0))
         .listAllEntityUsage(anyInt(), anyInt(), anyString(), anyString(), any(), anyString());
   }
@@ -991,7 +993,7 @@ public class ServiceEntityServiceImplTest extends CDNGEntitiesTestBase {
     Pageable pageRequest = PageUtils.getPageRequest(0, 10, null);
     Page<ServiceEntity> list = serviceEntityService.list(criteriaFromServiceFilter, pageRequest);
     assertThat(list.getContent()).isNotNull();
-    assertThat(list.getContent().size()).isEqualTo(0);
+    assertThat(list.getContent().size()).isZero();
 
     // List services operations.
     Criteria projectServiceCriteria = CoreCriteriaUtils.createCriteriaForGetList("ACCOUNT_ID", "ORG_ID", "PROJECT_ID");
